[gd_scene load_steps=5 format=3 uid="uid://tstsvc6l2xdm"]

[ext_resource type="Script" path="res://Scripts/alignment_picker.gd" id="1_8gumh"]
[ext_resource type="Script" path="res://Scripts/alignment_list.gd" id="1_qo2tf"]
[ext_resource type="Texture2D" uid="uid://deqhvnfw114vp" path="res://Sprites/advance.png" id="3_hsa52"]
[ext_resource type="StyleBox" uid="uid://crwlkegnfaves" path="res://Styles/style_label_align_picker.tres" id="4_1r6yf"]

[node name="AlignmentPicker" type="Node2D"]
script = ExtResource("1_8gumh")

[node name="cam" type="Camera2D" parent="."]

[node name="map" type="Node2D" parent="."]
z_index = -100
position = Vector2(192, 64)
scale = Vector2(0.5, 0.5)

[node name="available" type="Panel" parent="."]
offset_left = -512.0
offset_top = -24.0
offset_right = -480.0
offset_bottom = 72.0
theme_override_styles/panel = ExtResource("4_1r6yf")
script = ExtResource("1_qo2tf")

[node name="players" type="Panel" parent="."]
offset_left = -512.0
offset_top = -208.0
offset_right = -480.0
offset_bottom = -112.0
theme_override_styles/panel = ExtResource("4_1r6yf")
script = ExtResource("1_qo2tf")

[node name="text_available" type="Label" parent="."]
offset_left = -544.0
offset_top = -104.0
offset_right = -120.0
offset_bottom = -32.0
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("4_1r6yf")
text = "Available Leaders"
horizontal_alignment = 1
vertical_alignment = 1

[node name="text_players" type="Label" parent="."]
offset_left = -544.0
offset_top = -288.0
offset_right = -160.0
offset_bottom = -216.0
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("4_1r6yf")
text = "Chosen Leaders"
horizontal_alignment = 1
vertical_alignment = 1

[node name="text_name" type="Label" parent="."]
offset_left = -544.0
offset_top = 80.0
offset_right = 544.0
offset_bottom = 128.0
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("4_1r6yf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="play" type="TextureButton" parent="."]
offset_left = 416.0
offset_top = 160.0
offset_right = 544.0
offset_bottom = 288.0
texture_normal = ExtResource("3_hsa52")

[connection signal="mouse_entered" from="available" to="." method="_on_available_mouse_entered"]
[connection signal="mouse_exited" from="available" to="." method="_on_available_mouse_exited"]
[connection signal="mouse_entered" from="players" to="." method="_on_players_mouse_entered"]
[connection signal="mouse_exited" from="players" to="." method="_on_players_mouse_exited"]
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
